Modules/SG/sg.tf
resource "aws_security_group" "frontend_sg" {
  name = var.name
  description = "My Fisrt Security Group in Terraform"
  vpc_id = var.vpc
  
  ingress {
    description = "HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
